--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,15 @@
 {
   "name": "node-grpc-server",
+  "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "@grpc/proto-loader": "^0.5.4",
     "google-protobuf": "^3.12.2",
     "grpc": "^1.24.3",
     "knex": "^0.21.1",
     "pg": "^8.2.1"
-  },
-  "scripts": {
-    "start": "node index.js"
   },
   "devDependencies": {
     "grpc-tools": "^1.9.0"
